Mon Mar 13 2006  Loic Dachary  <loic@gnu.org>

	* Release 130.0

Sat Jan 14 2006  Loic Dachary  <loic@gnu.org>

	* Release 129.0

	* lib/Makefile.am: -no-undefined for libtool to work with cygwin

	* examples/five_card_hands.c: getopt_w32 not available on cygwin

Thu Sep 22 2005  Loic Dachary  <loic@gnu.org>

	* Release 128.0

	* lib/Makefile.am: remove generated tables on maintainer-clean

	* Portability and test fixes.

Mon Jul 04 16:55:02 2005  Loic Dachary  <loic@gnu.org>

	* Release 127.0	

	* include/inlines/eval_low27.h: A-5 is not a straight

Fri Dec 17 13:41:28 2004  Loic Dachary  <loic@gnu.org>

	*  RELEASE renamed to RELEASE.old to avoid file name conflicts with some
	   build systems.

Fri Dec 10 14:16:27 2004  Loic Dachary  <loic@gnu.org>

	* Release 126.0

	* include/pokereval_export.h: accomodate dynamic/static libraries

	* include/std_deck.h: do not use non portable const 
	
Fri Dec 03 13:31:2200.04  Loic Dachary  <loic@gnu.org>

	* Release 125.0

	* config/build.m4 : removed because too complex to maintain

	* configure.ac, bootstrap: lower autoconf requirements to 2.53

Thu Dec 02 3:00:0200.04  Tim Showalter  <tjs@psaux.com>

	* Updated Mac builds; currently, things seem to build with only
	  one config setting (--with-mac-target=darwin).
	* Make it unnecessary to have '.' in one's path when building.
	* bootstrap now checks for 'libtoolize' in both places, not 'libtool'
	  (My Debian system has no 'libtool', but my Mac does, and it's
	  not actually related to GNU libtool.)
	* boostrap now moves configure.in aside to shut up all the programs
	  that worry about configure.in's presence.
	* Fink now detected; --with-fink will default to /sw, as the
	  help claimed it did.
	* Default Mac build type is now darwin, since we have no carbon build.

Thu Nov 25 12:27:09 2004  Loic Dachary  <loic@gnu.org>

	* "Nick Wilton" <info@nickwilton.info> header patches + Makefiles for compilation on windows

Mon Nov 15 20:20:43 2004  Loic Dachary  <loic@gnu.org>
